@startuml





/' Objects '/

class Handler {
	+Handler()
	+Handler(void* serverNotifier)
	+~Handler()
	-mTaskQueue : SafeQueue<uint64_t>
	-CheckAvailableTask() : bool
	+GetName() : std::string
	-mName : std::string
	+GetTotalWork() : uint64_t
	+GetWorkLog() : uint64_t
	-mTotalWork : uint64_t
	-mWorkLog : uint64_t
	+ExecuteTask() : void
	+LogWork(uint64_t workLog) : void
	+ReceiveTask(uint64_t task) : void
	-ServerNotifier : void*
}


class SafeQueue <template<class T>> {
	+SafeQueue()
	+~SafeQueue()
	+back() : T
	+front() : T
	+pop() : T
	+empty() : bool {query}
	-m : mutable std::mutex
	-c : std::condition_variable
	-q : std::queue<T>
	+size() : unsigned long {query}
	+push(T t) : void
}


class Server {
	+Server()
	+Server(std::string& rFilePath)
	+~Server()
	-mListTasks : SafeQueue<uint64_t>
	-mRequirementPath : std::string
	-mListHandlers : std::vector<HandlerPtr>
	-mMaxHandlers : uint8_t
	-mNumberOfHandlers : uint8_t
	+AssignTask() : void
	+DecreaseNumberOfActiveHandlers() : void
	+GetRequirement() : void
	+ReadReport() : void
	+SortRequirement() : void
	+UpdateRequirementPath(std::string& rFilePath) : void
	+WriteReport() : void
}





/' Inheritance relationships '/




/' Aggregation relationships '/

.Handler *-- .SafeQueue


.Server *-- .SafeQueue






/' Nested objects '/



@enduml
